Fix Action Drop down and made Delete button more visible in dark mode

--- a/app/next-client-app/app/globals.css
+++ b/app/next-client-app/app/globals.css
@@ -33,7 +33,7 @@
   --muted-foreground: 215 20.2% 65.1%;
   --success: 142.1 70% 45%;
   --success-foreground: 210 40% 98%;
-  --destructive: 0 62.8% 30.6%;
+  --destructive: 0 84.2% 60.2%;
   --destructive-foreground: 210 40% 98%;
   --warning: 38 92% 50%;
   --warning-foreground: 210 40% 98%;
